--- a/core/templates/pages/learner-dashboard-page/goals-tab.component.html
+++ b/core/templates/pages/learner-dashboard-page/goals-tab.component.html
@@ -106,7 +106,8 @@
     width: 656px;
   }
   .oppia-goals-title {
-    color: #333;
+    color: #00645c;
+    font-family: "Capriola", sans-serif;
     font-size: 28px;
     font-weight: 500;
     letter-spacing: 0;
@@ -270,7 +271,8 @@
     width: 726px;
   }
   .oppia-edit-goals-title {
-    color: #333;
+    color: #00645c;
+    font-family: "Capriola", sans-serif;
     font-size: 28px;
     font-weight: 500;
     letter-spacing: 0;
