--- a/core/templates/pages/story-editor-page/modal-templates/new-chapter-title-modal.template.html
+++ b/core/templates/pages/story-editor-page/modal-templates/new-chapter-title-modal.template.html
@@ -39,6 +39,9 @@
       <span class="new-chapter-error-msg" ng-if="correctnessFeedbackDisabled">
         <span><[correctnessFeedbackDisabledString]></span>
       </span>
+      <span class="new-chapter-error-msg" ng-if="categoryNotDefault">
+        <span><[categoryNotDefaultString]></span>
+      </span>
     </div>
     <div class="chapter-input chapter-input-thumbnail protractor-test-chapter-input-thumbnail">
       <div class="chapter-input-header">
