--- a/core/templates/pages/admin-page/navbar/admin-navbar.component.html
+++ b/core/templates/pages/admin-page/navbar/admin-navbar.component.html
@@ -39,9 +39,9 @@
     .admin-navbar .oppia-admin-page-dropdown {
       display: block;
     }
-    .admin-navbar .oppia-hide-in-small-width-screens {
+    /* .admin-navbar .oppia-hide-in-small-width-screens {
       display: none;
-    }
+    } */
   }
   @media screen and (min-width: 711px) {
     .admin-navbar .oppia-admin-page-dropdown,
