--- a/core/templates/pages/topics-and-skills-dashboard-page/topics-and-skills-dashboard-page.component.html
+++ b/core/templates/pages/topics-and-skills-dashboard-page/topics-and-skills-dashboard-page.component.html
@@ -559,7 +559,7 @@
     color: #fff;
     text-decoration: none;
   }
-  @media screen and (max-width: 1200px) {
+  /* @media screen and (max-width: 1200px) {
     .oppia-topics-and-skills-dashboard .dashboard-content {
       width: 100%;
     }
@@ -685,5 +685,5 @@
       display: block;
       text-align: center;
     }
-  }
+  } */
 </style>
